foxzicool.github.io

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
-    const names = ['Terry', 'Nico', 'Stella', 'Erica', 'Christine', 'Lewvis', 'Esther', 'Eddie'];
+    const names = ['Terry', 'Nico', 'Stella', 'Erica', 'Christine', 'Lewvis', 'Esther', 'Eddie', 'keven', 'Deborah', '易寰'];
     const container = document.getElementById('person-inputs');
     names.forEach((name, index) => {
         const inputGroup = document.createElement('div');
