--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h2>(Dre)</h2>
+    <h2>(Dreamers F)分帳系統-ps:刪除人員就可以免去這次沒參加的</h2>
     <form id="split-form">
         <div id="person-inputs">
             <!-- 輸入框將在這裡自動生成 -->
