填寫版本資訊2

--- a/7777.html
+++ b/7777.html
@@ -6,30 +6,25 @@
     <title>數字存入文字檔</title>
 </head>
 <body>
-    <h2>輸入數字並存入 text 檔案</h2>
-    <input type="number" id="numberInput" placeholder="輸入數字">
     <button onclick="sendNumber()">提交</button>
-    <p id="status"></p>
-
     <script>
-        function sendNumber() {
-            let number = document.getElementById("numberInput").value;
-
-            fetch("https://7d7e-36-224-190-81.ngrok-free.app/save", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ number: number })
-            })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById("status").innerText = data.message;
-            })
-            .catch(error => {
-                console.error("錯誤:", error);
-            });
-        }
-    </script>
+         function sendNumber() {
+             let number = document.getElementById("numberInput").value;
+             fetch("/send-to-ngrok", {
+                 method: "POST",
+                 headers: {
+                     "Content-Type": "application/json"
+                 },
+                 body: JSON.stringify({ number: number })
+             })
+             .then(response => response.json())
+             .then(data => {
+                 document.getElementById("status").innerText = data.message;
+             })
+             .catch(error => {
+                 console.error("錯誤:", error);
+             });
+         }
+    </script>    
 </body>
 </html>
