--- a/7777.html
+++ b/7777.html
@@ -2,10 +2,11 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>數字存入文字檔</title>
 </head>
 <body>
-    <h2>輸入數字並存入文字檔</h2>
+    <h2>輸入數字並存入 text 檔案</h2>
     <input type="number" id="numberInput" placeholder="輸入數字">
     <button onclick="sendNumber()">提交</button>
     <p id="status"></p>
@@ -14,14 +15,11 @@
         function sendNumber() {
             let number = document.getElementById("numberInput").value;
 
-            if (!number) {
-                document.getElementById("status").innerText = "請輸入數字！";
-                return;
-            }
-
-            fetch("https://59bf-36-224-190-81.ngrok-free.app/send-to-ngrok", {  
+            fetch(" https://b711-36-224-190-81.ngrok-free.app", {
                 method: "POST",
-                headers: {"Content-Type": "application/json"},
+                headers: {
+                    "Content-Type": "application/json"
+                },
                 body: JSON.stringify({ number: number })
             })
             .then(response => response.json())
@@ -29,10 +27,9 @@
                 document.getElementById("status").innerText = data.message;
             })
             .catch(error => {
-                document.getElementById("status").innerText = "發生錯誤！";
                 console.error("錯誤:", error);
             });
         }
-    </script>    
+    </script>
 </body>
 </html>
