填寫版本資訊7

--- a/7777.html
+++ b/7777.html
@@ -15,7 +15,7 @@
         function sendNumber() {
             let number = document.getElementById("numberInput").value;
 
-            fetch(" https://b711-36-224-190-81.ngrok-free.app", {
+            fetch("https://b711-36-224-190-81.ngrok-free.app/save", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
