--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <script>
         function sendNumber() {
             let number = document.getElementById("numberInput").value;
-
-            fetch("https://be92-114-25-40-224.ngrok-free.app/save", {
+            fetch("https://f7ce-61-231-26-86.ngrok-free.app/save", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
@@ -27,7 +26,7 @@
                 document.getElementById("status").innerText = data.message;
             })
             .catch(error => {
-                console.error("錯誤:", error);
+                document.getElementById("status").innerText = "後端連不到";
             });
         }
     </script>
