--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       border-radius: 16px;
       overflow: hidden;
       margin-top: 24px;
+      background: #fff;
     }
     #bgimg {
       width: 300px;
@@ -21,19 +22,22 @@
       position: absolute;
       left: 0; top: 0;
       z-index: 1;
+      pointer-events: none; /* 讓下面內容可以操作 */
     }
     #content {
       position: absolute;
       bottom: 0; left: 0; right: 0;
       margin: 20px;
       padding: 10px;
-      background: rgba(0,0,0,0.35);
+      background: rgba(0,0,0,0.20);
       border-radius: 8px;
-      color: #fff;
+      color: #222;
       font-size: 20px;
       z-index: 2;
       word-break: break-all;
       font-family: 'Microsoft JhengHei', sans-serif;
+      text-align: left;
+      min-height: 80px;
     }
     #downloadLink {
       display: none;
@@ -58,7 +62,7 @@
   <p id="status"></p>
 
   <div id="preview">
-    <img id="bgimg" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?fit=crop&w=400&q=80" alt="背景圖">
+    <img id="bgimg" crossOrigin="anonymous" src="https://foxzicool.github.io/pic.svg" alt="背景圖">
     <div id="content">你的見證會顯示在這裡</div>
   </div>
   <div id="imgResultArea"></div>
@@ -87,7 +91,6 @@
       .then(data => {
         document.getElementById("status").innerText = data.message;
 
-        // 2. 等背景圖片載入完成再畫 canvas
         let bgimg = document.getElementById("bgimg");
         if (!bgimg.complete) {
           bgimg.onload = generateImage;
@@ -102,13 +105,11 @@
 
     function generateImage() {
       html2canvas(document.getElementById("preview")).then(canvas => {
-        // 顯示圖片
         let imgArea = document.getElementById("imgResultArea");
         imgArea.innerHTML = '';
         let img = document.createElement("img");
         img.src = canvas.toDataURL();
         imgArea.appendChild(img);
-        // 設定下載連結
         document.getElementById("downloadLink").href = img.src;
         document.getElementById("downloadLink").style.display = "inline-block";
       });
