--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
     #preview {
-      width: 300px;
-      height: 400px;
+      width: 90vw;
+      max-width: 300px;
+      aspect-ratio: 3/4;
       position: relative;
       border-radius: 16px;
       overflow: hidden;
@@ -16,13 +17,13 @@
       background: #fff;
     }
     #bgimg {
-      width: 300px;
-      height: 400px;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
       position: absolute;
       left: 0; top: 0;
       z-index: 1;
-      pointer-events: none; /* 讓下面內容可以操作 */
+      pointer-events: none;
     }
     #content {
       position: absolute;
@@ -46,9 +47,10 @@
       color: #2067b2;
       text-decoration: underline;
     }
-    textarea {width: 300px;}
+    textarea {width: 90vw; max-width: 300px;}
     #imgResultArea img {
-      width: 300px;
+      width: 90vw;
+      max-width: 300px;
       border-radius: 16px;
       margin-top: 16px;
       display: block;
@@ -104,11 +106,21 @@
     }
 
     function generateImage() {
-      html2canvas(document.getElementById("preview")).then(canvas => {
+      const preview = document.getElementById("preview");
+      const rect = preview.getBoundingClientRect();
+      html2canvas(preview, {
+        scale: 2,
+        width: rect.width,
+        height: rect.height
+      }).then(canvas => {
         let imgArea = document.getElementById("imgResultArea");
         imgArea.innerHTML = '';
         let img = document.createElement("img");
         img.src = canvas.toDataURL();
+        img.style.width = rect.width + 'px';
+        img.style.borderRadius = '16px';
+        img.style.marginTop = '16px';
+        img.style.display = 'block';
         imgArea.appendChild(img);
         document.getElementById("downloadLink").href = img.src;
         document.getElementById("downloadLink").style.display = "inline-block";
