--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </style>
 </head>
 <body>
-  <h2>寫下你經歷的恩典</h2>
+  <h2>寫下你經歷的恩典1</h2>
   <textarea id="testimony" placeholder="請輸入你的見證..." rows="5"></textarea><br>
   <button onclick="submitAndGenerate()">提交並生成圖片</button>
   <p id="status"></p>
