--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
       margin-top: 24px;
       background: #fff;
     }
-    #bgimg {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      position: absolute;
-      left: 0; top: 0;
-      z-index: 1;
-      pointer-events: none;
-    }
+#bgimg {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;   /* <- 重點：原本是 cover，現在用 contain */
+  position: absolute;
+  left: 0; top: 0;
+  z-index: 1;
+  pointer-events: none;
+  background: #fff;      /* 避免SVG有透明區塊時，預設背景是白色 */
+}
+
     #content {
       position: absolute;
       bottom: 0; left: 0; right: 0;
