--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
       margin-top: 24px;
       background: #fff;
     }
-#bgimg {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;   /* <- 重點：原本是 cover，現在用 contain */
-  position: absolute;
-  left: 0; top: 0;
-  z-index: 1;
-  pointer-events: none;
-  background: #fff;      /* 避免SVG有透明區塊時，預設背景是白色 */
-}
-
+    #bgimg {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;  /* <-- 這裡改成 contain */
+      position: absolute;
+      left: 0; top: 0;
+      z-index: 1;
+      pointer-events: none;
+      background: #fff;
+    }
     #content {
       position: absolute;
       bottom: 0; left: 0; right: 0;
@@ -60,7 +59,7 @@
   </style>
 </head>
 <body>
-  <h2>寫下你經歷的恩典2</h2>
+  <h2>寫下你經歷的恩典</h2>
   <textarea id="testimony" placeholder="請輸入你的見證..." rows="5"></textarea><br>
   <button onclick="submitAndGenerate()">提交並生成圖片</button>
   <p id="status"></p>
@@ -128,4 +127,4 @@
     }
   </script>
 </body>
-</htmgit 
+</html>
