--- a/index.html
+++ b/index.html
@@ -4,125 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>神的恩典見證上傳</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
-    #preview {
-      width: 90vw;
-      max-width: 300px;
-      aspect-ratio: 3/4;
-      position: relative;
-      border-radius: 16px;
-      overflow: hidden;
-      margin-top: 24px;
-      background: #fff;
-    }
-    #bgimg {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;  /* <-- 這裡改成 contain */
-      position: absolute;
-      left: 0; top: 0;
-      z-index: 1;
-      pointer-events: none;
-      background: #fff;
-    }
-    #content {
-      position: absolute;
-      bottom: 0; left: 0; right: 0;
-      margin: 20px;
-      padding: 10px;
-      background: rgba(0,0,0,0.20);
-      border-radius: 8px;
-      color: #222;
-      font-size: 20px;
-      z-index: 2;
-      word-break: break-all;
-      font-family: 'Microsoft JhengHei', sans-serif;
-      text-align: left;
-      min-height: 80px;
-    }
-    #downloadLink {
-      display: none;
-      margin-top: 16px;
-      font-size: 16px;
-      color: #2067b2;
-      text-decoration: underline;
-    }
-    textarea {width: 90vw; max-width: 300px;}
-    #imgResultArea img {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 16px;
-      margin-top: 16px;
-      display: block;
-    }
+    body { font-family: 'Microsoft JhengHei', sans-serif; }
+    textarea, input { width: 90vw; max-width: 350px; margin-bottom:8px; }
+    button { margin-top: 8px; }
   </style>
 </head>
 <body>
-  <h2>寫下你經歷的恩典</h2>
+  <h2>神的恩典見證上傳</h2>
+  <input id="name" placeholder="你的名字"><br>
   <textarea id="testimony" placeholder="請輸入你的見證..." rows="5"></textarea><br>
-  <button onclick="submitAndGenerate()">提交並生成圖片</button>
+  <button onclick="sendTestimony()">提交見證</button>
   <p id="status"></p>
 
-  <div id="preview">
-    <img id="bgimg" crossOrigin="anonymous" src="https://foxzicool.github.io/pic.svg" alt="背景圖">
-    <div id="content">你的見證會顯示在這裡</div>
-  </div>
-  <div id="imgResultArea"></div>
-  <a id="downloadLink" download="testimony.png">下載圖片</a>
-  <p style="color:red;">產生圖片後，<b>長按圖片</b>可以存到相簿</p>
-
   <script>
-    document.getElementById("testimony").addEventListener("input", function() {
-      document.getElementById("content").innerText = this.value || "你的見證會顯示在這裡";
-    });
-
-    function submitAndGenerate() {
-      let content = document.getElementById("testimony").value.trim();
-      if (!content) {
-        document.getElementById("status").innerText = "請輸入見證內容！";
+    function sendTestimony() {
+      const name = document.getElementById("name").value.trim();
+      const content = document.getElementById("testimony").value.trim();
+      if (!name || !content) {
+        document.getElementById("status").innerText = "請填寫名字和見證內容";
         return;
       }
-
-      // 1. 先送到後端
-      fetch("https://f7ce-61-231-26-86.ngrok-free.app/save", {
+      fetch("https://你的ngrok-url/save_testimony", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ number: content })
+        body: JSON.stringify({ name, content })
       })
-      .then(response => response.json())
-      .then(data => {
+      .then(r=>r.json())
+      .then(data=>{
         document.getElementById("status").innerText = data.message;
-
-        let bgimg = document.getElementById("bgimg");
-        if (!bgimg.complete) {
-          bgimg.onload = generateImage;
-        } else {
-          generateImage();
-        }
-      })
-      .catch(error => {
-        document.getElementById("status").innerText = "後端連不到";
-      });
-    }
-
-    function generateImage() {
-      const preview = document.getElementById("preview");
-      html2canvas(preview, {
-        scale: 2 // 高解析，不指定width/height，讓它直接用DOM大小
-      }).then(canvas => {
-        let imgArea = document.getElementById("imgResultArea");
-        imgArea.innerHTML = '';
-        let img = document.createElement("img");
-        img.src = canvas.toDataURL();
-        img.style.width = "100%";
-        img.style.maxWidth = preview.offsetWidth + "px";
-        img.style.borderRadius = '16px';
-        img.style.marginTop = '16px';
-        img.style.display = 'block';
-        imgArea.appendChild(img);
-        document.getElementById("downloadLink").href = img.src;
-        document.getElementById("downloadLink").style.display = "inline-block";
+      }).catch(()=>{
+        document.getElementById("status").innerText = "連線失敗";
       });
     }
   </script>
