--- a/index2.html
+++ b/index2.html
@@ -2,42 +2,61 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>祈福牆 / 感恩牆</title>
+  <title>恩典行動：送祝福卡</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <style>
-    .card {
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 2px 8px #eee;
-      margin: 12px auto;
-      max-width: 340px;
-      padding: 20px;
-      font-family: 'Microsoft JhengHei', sans-serif;
-    }
-    .card .blesser { font-size:14px; color:#888;}
-    .card .bless-target { font-weight:bold; color:#247;}
-    .card .bless-content { margin:12px 0;}
-    .card .date { font-size:12px; color:#aaa;}
+    body{font-family:'Microsoft JhengHei',sans-serif;}
+    .main{max-width:350px;margin:40px auto;}
+    select,textarea,button{width:100%;max-width:340px;padding:6px;margin:8px 0;}
+    button{padding:8px 20px;}
   </style>
 </head>
 <body>
-  <h2>祈福牆 / 感恩牆</h2>
-  <div id="cards"></div>
+  <div class="main">
+    <h2>恩典行動：送祝福卡</h2>
+    <form onsubmit="sendBlessing(event)">
+      <label>我要祝福誰：</label>
+      <select id="target" required>
+        <option value="">請選擇</option>
+        <option>terry</option><option>christine</option><option>Deborah</option><option>Eddie</option><option>Erica</option>
+        <option>Kevein</option><option>Lewvis</option><option>Lexie</option><option>Nico</option><option>Stella</option>
+        <option>Esther</option><option>Devin</option><option>Gary</option>
+      </select>
+      <textarea id="blesscontent" required placeholder="寫下祝福內容"></textarea>
+      <button type="submit">送出祝福卡，進入下載頁</button>
+    </form>
+    <p id="blessStatus"></p>
+  </div>
   <script>
-    // 實際上這應該用 fetch 取API
-    const data = [
-      {name: "Terry", target: "Christine", content: "願你天天有神的祝福～", date: "2024-07-09"},
-      {name: "gggg", target: "Christine", content: "願你平安順利！", date: "2024-07-09"},
-      {name: "hhhh", target: "Christine", content: "你很棒！", date: "2024-07-09"},
-      {name: "Terry", target: "Eddie", content: "Eddie加油！", date: "2024-07-09"},
-    ];
-    document.getElementById("cards").innerHTML = data.map(d=>`
-      <div class="card">
-        <div class="blesser">${d.name} 祝福 <span class="bless-target">${d.target}</span></div>
-        <div class="bless-content">${d.content}</div>
-        <div class="date">${d.date}</div>
-      </div>
-    `).join("");
+    let myname = localStorage.getItem('myname') || "";
+    let mypw = localStorage.getItem('mypw') || "";
+
+    function sendBlessing(e){
+      e.preventDefault();
+      let name = myname;
+      let password = mypw;
+      let target = document.getElementById('target').value;
+      let content = document.getElementById('blesscontent').value;
+      if(!name || !target || !content){
+        document.getElementById('blessStatus').innerText = "請填齊欄位";
+        return;
+      }
+      if(target === name){
+        document.getElementById('blessStatus').innerText = "不能祝福自己";
+        return;
+      }
+      fetch("https://你的ngrok-url/submit_blessing",{
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body:JSON.stringify({name, password, target, content})
+      })
+      .then(r=>r.json())
+      .then(data=>{
+        document.getElementById('blessStatus').innerText = data.message;
+        setTimeout(()=>location.href="index3.html", 1000);
+      })
+      .catch(()=>{document.getElementById('blessStatus').innerText="送出失敗";});
+    }
   </script>
 </body>
 </html>
