--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,7 @@
         document.getElementById('blessStatus').innerText = "不能祝福自己";
         return;
       }
-      fetch("https://你的ngrok-url/submit_blessing",{
+      fetch("https://8035-61-231-26-86.ngrok-free.app/submit_blessing",{
         method:"POST",
         headers:{"Content-Type":"application/json"},
         body:JSON.stringify({name, password, target, content})
