--- a/index3.html
+++ b/index3.html
@@ -2,45 +2,41 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>恩典行動：下載我的卡片</title>
+  <title>公開恩典卡片一覽與下載</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
     body{font-family:'Microsoft JhengHei',sans-serif;}
     .main{max-width:350px;margin:40px auto;}
-    .card{background:#fff;border-radius:16px;box-shadow:0 2px 8px #eee;margin:14px 0;padding:18px;}
-    .download{color:#2067b2;font-size:14px;cursor:pointer;}
-    button{padding:8px 20px;}
+    .card{background:#fff;border-radius:16px;box-shadow:0 2px 8px #eee;margin:14px 0;padding:18px;position:relative;}
+    button{padding:6px 16px;margin-top:12px;}
   </style>
 </head>
 <body>
   <div class="main">
-    <h2>下載我的卡片</h2>
-    <div id="mycards"></div>
+    <h2>公開恩典卡片一覽</h2>
+    <div id="cards"></div>
   </div>
   <script>
-    let myname = localStorage.getItem('myname') || "";
-    let mypw = localStorage.getItem('mypw') || "";
-
-    function loadMyCards(){
-      if(!myname){document.getElementById('mycards').innerText="沒有名字，請回首頁選名子";return;}
-      fetch("https://8035-61-231-26-86.ngrok-free.app/get_my_cards",{
-        method:"POST",
-        headers:{"Content-Type":"application/json"},
-        body:JSON.stringify({name:myname, password:mypw})
-      })
-      .then(r=>r.json())
-      .then(cards=>{
-        if(!cards.length){document.getElementById('mycards').innerText="你還沒有卡片可以下載";return;}
-        document.getElementById('mycards').innerHTML = cards.map((d,idx)=>`
-          <div class="card" id="card${idx}">
-            <div>${d.type === 'bless' ? `${d.sender} 祝福 <b>${d.target}</b>` : `${d.sender} 的見證`}</div>
-            <div style="margin:10px 0;">${d.content}</div>
-            <div style="font-size:12px;color:#aaa;">${d.date}</div>
-            <button onclick="downloadCard('card${idx}')">下載這張卡片圖片</button>
-          </div>
-        `).join("");
-      });
+    function loadCards(){
+      fetch("https://8035-61-231-26-86.ngrok-free.app/get_public_cards")
+        .then(r=>r.json())
+        .then(cards=>{
+          if(!cards.length){document.getElementById('cards').innerText="目前沒有公開卡片";return;}
+          document.getElementById('cards').innerHTML = cards.map((d,idx)=>`
+            <div class="card" id="card${idx}">
+              <div>
+                ${d.type === 'bless'
+                  ? `${d.sender} 祝福 <b>${d.target}</b>`
+                  : `${d.sender} 的見證`
+                }
+              </div>
+              <div style="margin:10px 0;">${d.content}</div>
+              <div style="font-size:12px;color:#aaa;">${d.date}</div>
+              <button onclick="downloadCard('card${idx}')">下載這張卡片圖片</button>
+            </div>
+          `).join("");
+        });
     }
 
     function downloadCard(id){
@@ -53,7 +49,7 @@
       });
     }
 
-    loadMyCards();
+    loadCards();
   </script>
 </body>
 </html>
